Fix: code overflow
코드 삐져나오는거 해결

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,5 +1,4 @@
 
-// markdowns
 h1, h2 {
     color: $font-title-color;
 }
@@ -14,6 +13,14 @@ img {
     height: 100%;
     margin-right: 10px;
     box-shadow: 0px 0px 0px black;
+}
+pre {
+    width: 95%;
+    padding: 4px;
+    box-shadow: 1.3px 1px 2px black;
+}
+code {
+    white-space: pre-wrap;
 }
 .tag {
     height: 20px;
