--- a/_sass/layers.scss
+++ b/_sass/layers.scss
@@ -58,9 +58,10 @@ body {
     width: 100%;
     background-color: $background-color;
     padding: 0px 50px 0px 50px;
+    word-wrap: break-word;
 
     @include media-query-in-mobile() {
-        padding: 0px 30px 0px 30px;
+        padding: 0px 10px 0px 10px;
     }
 
     // post summary for home, tag result
